--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,1 +1,14 @@
-<p>items works!</p>
+<div class="container">
+    <div *ngIf="items?.length > 0; else noItems" >
+        <ul *ngFor="let item of items" >
+            <li>
+                <strong>{{item.title}}</strong>
+                {{item.description}}
+            </li>
+        </ul>
+    </div>
+    <ng-template  #noItems>
+        <hr>
+        <h5>There are no items to list</h5>
+    </ng-template>
+</div>
